client/src/components/AuthForm/AuthForm.css
.login {
  width: 600px;
  height: 600px;
  background-color: var(--columbia-blue);
  border-radius: 30%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 100px;
  box-shadow: 0 0 10px 5px var(--gray);
}

.login form {
  height: 60%;
  width: 60%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  font-family: 'Nunito', sans-serif;
  font-weight: 300;
  font-size: 20px;
  padding-bottom: 20px;
}


.login form input {
  height: 50px;
  width: 100%;
  border-radius: 10px;
  border: none;
  padding-left: 10px;
  background-color: var(--platinum);
  box-shadow: 2px 2px 5px var(--gray);
}

.login form input:focus {
  outline: none;
  box-shadow: 2px 2px 10px 5px var(--gray);
}

.invalid-feedback {
  font-size: 15px;
}

button {
  height: 50px;
  border-radius: 10px;
  border: none;
  background-color: var(--mint-green);
  box-shadow: 2px 2px 5px var(--gray);
}

.btn-success {
  width: 70px;
  align-self: center;
  background-color: var(--dutch-white);
  box-shadow: 2px 2px 5px var(--gray);
}

